load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["ocpsanity.go"],
    importpath = "github.com/hongkailiu/test-go/cmd/ocpsanity",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/lib/logger:go_default_library",
        "//pkg/lib/util:go_default_library",
        "//pkg/ocpsanity:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/gopkg.in/alecthomas/kingpin.v2:go_default_library",
    ],
)

go_binary(
    name = "ocpsanity",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
