load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["ocptf.go"],
    importpath = "github.com/hongkailiu/test-go/cmd/ocptf",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/ocptf:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/gopkg.in/alecthomas/kingpin.v2:go_default_library",
    ],
)

go_binary(
    name = "ocptf",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
