load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["worker_pool.go"],
    importpath = "github.com/hongkailiu/test-go/pkg/channel",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/lib/util:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_binary(
    name = "channel",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
