load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "aws_ec2_helper.go",
        "cloud_provider.go",
        "config.go",
        "flexy.go",
        "inventory_generator.go",
    ],
    importpath = "github.com/hongkailiu/test-go/pkg/flexy",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/aws/aws-sdk-go-v2/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go-v2/service/ec2:go_default_library",
        "//vendor/github.com/google/uuid:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/google.golang.org/api/compute/v1:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "aws_ec2_helper_test.go",
        "config_test.go",
        "flexy_suite_test.go",
        "flexy_test.go",
        "inventory_generator_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/aws/aws-sdk-go-v2/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go-v2/aws/endpoints:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go-v2/aws/external:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go-v2/service/ec2:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
        "//vendor/golang.org/x/oauth2/google:go_default_library",
        "//vendor/google.golang.org/api/compute/v1:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)
