load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["godogs.go"],
    importpath = "github.com/hongkailiu/test-go/pkg/godogs",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "godogs",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["godogs_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/godogs/service:go_default_library",
        "//vendor/github.com/DATA-DOG/godog:go_default_library",
        "//vendor/github.com/DATA-DOG/godog/colors:go_default_library",
    ],
)
