load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "authentication.go",
        "authorization.go",
        "config.go",
        "jwt.go",
        "login.go",
        "prometheus.go",
        "server.go",
    ],
    importpath = "github.com/hongkailiu/test-go/pkg/http",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/http/db:go_default_library",
        "//pkg/http/info:go_default_library",
        "//pkg/http/model:go_default_library",
        "//pkg/lib/util:go_default_library",
        "//pkg/random:go_default_library",
        "//pkg/swagger/swagger/models:go_default_library",
        "//vendor/github.com/dgrijalva/jwt-go:go_default_library",
        "//vendor/github.com/gin-contrib/sessions:go_default_library",
        "//vendor/github.com/gin-contrib/sessions/cookie:go_default_library",
        "//vendor/github.com/gin-gonic/gin:go_default_library",
        "//vendor/github.com/go-openapi/runtime/middleware:go_default_library",
        "//vendor/github.com/google/go-github/github:go_default_library",
        "//vendor/github.com/gorilla/securecookie:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus/promhttp:go_default_library",
        "//vendor/github.com/satori/go.uuid:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
        "//vendor/golang.org/x/oauth2/github:go_default_library",
        "//vendor/golang.org/x/oauth2/google:go_default_library",
        "//vendor/google.golang.org/api/oauth2/v2:go_default_library",
    ],
)
