load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/hongkailiu/test-go/pkg/httpreverse",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/lib/util:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
