load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logrus.go"],
    importpath = "github.com/hongkailiu/test-go/pkg/logrus",
    visibility = ["//visibility:private"],
    deps = ["//vendor/github.com/sirupsen/logrus:go_default_library"],
)

go_binary(
    name = "logrus",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
