load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "output.go",
        "tf.go",
    ],
    importpath = "github.com/hongkailiu/test-go/pkg/ocptf",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/sirupsen/logrus:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "output_test.go",
        "tf_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
