load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "model.go",
        "service.go",
    ],
    importpath = "github.com/hongkailiu/test-go/pkg/weather",
    visibility = ["//visibility:public"],
    deps = ["//vendor/gopkg.in/resty.v1:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["service_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
