load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "github.com/hongkailiu/test-go/pkg/experimental/doc",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "doc_test.go",
        "example_test.go",
    ],
    embed = [":go_default_library"],
)
