load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/hongkailiu/test-go/pkg/experimental/stomp",
    visibility = ["//visibility:private"],
    deps = ["//vendor/github.com/go-stomp/stomp:go_default_library"],
)

go_binary(
    name = "stomp",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
