load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["stringutil.go"],
    importpath = "github.com/hongkailiu/test-go/pkg/experimental/stringutil",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["stringutil_test.go"],
    embed = [":go_default_library"],
)
