load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["model.go"],
    importpath = "github.com/hongkailiu/test-go/pkg/http/model",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/jinzhu/gorm:go_default_library"],
)
