load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["addressbook.pb_test.go"],
    deps = [
        "//pkg/probuf/gen/proto:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
