load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cmd.go"],
    importpath = "github.com/hongkailiu/test-go/pkg/testctl/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/testctl/cmd/config:go_default_library",
        "//pkg/testctl/cmd/http:go_default_library",
        "//pkg/testctl/cmd/ocpsanity:go_default_library",
        "//pkg/testctl/cmd/version:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)
