load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/hongkailiu/test-go/pkg/experimental/godogs/service",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["service_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/DATA-DOG/godog:go_default_library",
        "//vendor/github.com/DATA-DOG/godog/colors:go_default_library",
    ],
)
